add_subdirectory(base)
add_subdirectory(dafif)
add_subdirectory(iodevice)
add_subdirectory(linearsystem)
add_subdirectory(simulation)
add_subdirectory(terrain)
add_subdirectory(models)
add_subdirectory(recorder)
add_subdirectory(graphics)
add_subdirectory(instruments)
add_subdirectory(gui/glut)
add_subdirectory(interop/common)
add_subdirectory(interop/dis)
add_subdirectory(interop/hla)
add_subdirectory(interop/rprfom)
add_subdirectory(otw)
add_subdirectory(map/rpf)
