add_subdirectory(base)
if(OPENEAAGLES_DAFIF)
	add_subdirectory(dafif)
endif()
if(OPENEAAGLES_IODEVICE)
	add_subdirectory(iodevice)
endif()
if(OPENEAAGLES_LINEARSYSTEM)
	add_subdirectory(linearsystem)
endif()
if(OPENEAAGLES_SIMULATION)
	add_subdirectory(simulation)
endif()
if(OPENEAAGLES_TERRAIN)
	add_subdirectory(terrain)
endif()
if(OPENEAAGLES_MODELS)
	add_subdirectory(models)
endif()
if(OPENEAAGLES_RECORDER)
	add_subdirectory(recorder)
endif()
if(OPENEAAGLES_GRAPHICS)
	add_subdirectory(graphics)
endif()
if(OPENEAAGLES_INSTRUMENTS)
	add_subdirectory(instruments)
endif()
if(OPENEAAGLES_GUI)
	add_subdirectory(gui/glut)
endif()
add_subdirectory(interop/common)
if(OPENEAAGLES_INTEROP_DIS)
	add_subdirectory(interop/dis)
endif()
if(OPENEAAGLES_INTEROP_HLA)
	add_subdirectory(interop/hla)
endif()
if(OPENEAAGLES_INTEROP_RPRFOM)
	add_subdirectory(interop/rprfom)
endif()
if(OPENEAAGLES_INTEROP_OTW)
	add_subdirectory(otw)
endif()
if(OPENEAAGLES_INTEROP_RPF)
	add_subdirectory(map/rpf)
endif()
